--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -118,16 +118,16 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Engine Core\Scene\OpenCL\CLScene.h" />
     <ClInclude Include="Source Files\Engine Core\Scene\Scene.h" />
     <ClInclude Include="Source Files\Engine Core\Scene\Sky.h" />
-    <ClInclude Include="Source Files\GPUDevices\CUDA\CUDADevices.cuh" />
-    <ClInclude Include="Source Files\GPUDevices\Devices.h" />
+    <ClInclude Include="Source Files\GPGPU\CUDA\CUDADevices.cuh" />
+    <ClInclude Include="Source Files\GPGPU\GPUManager.h" />
     <ClInclude Include="Source Files\Input\Input.h" />
     <ClInclude Include="Source Files\Input\InputState.h" />
     <ClInclude Include="Source Files\Multithreading\Scheduler.h" />
     <ClInclude Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cuh" />
     <ClInclude Include="Source Files\Physics Engine\PhysicsEngine.h" />
-    <ClInclude Include="Source Files\Raster\RasterBackend.h" />
-    <ClInclude Include="Source Files\Raster\Vulkan\VulkanBackend.h" />
-    <ClInclude Include="Source Files\Raster\Vulkan\VulkanUtility.h" />
+    <ClInclude Include="Source Files\Raster Engine\RasterBackend.h" />
+    <ClInclude Include="Source Files\Raster Engine\Vulkan\VulkanBackend.h" />
+    <ClInclude Include="Source Files\Raster Engine\Vulkan\VulkanUtility.h" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\Ray.cuh" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\RayEngine.cuh" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\RayJob.cuh" />
@@ -160,9 +160,9 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Display\Window\WindowManager.cpp" />
     <ClCompile Include="Source Files\Engine Core\Allocator\Allocator.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
-    <ClCompile Include="Source Files\GPUDevices\Devices.cpp" />
-    <ClCompile Include="Source Files\Raster\RasterBackend.cpp" />
-    <ClCompile Include="Source Files\Raster\Vulkan\VulkanBackend.cpp" />
+    <ClCompile Include="Source Files\GPGPU\GPUManager.cpp" />
+    <ClCompile Include="Source Files\Raster Engine\RasterBackend.cpp" />
+    <ClCompile Include="Source Files\Raster Engine\Vulkan\VulkanBackend.cpp" />
     <ClCompile Include="Source Files\Utility\Logger.cpp" />
     <ClCompile Include="Source Files\Utility\Settings.cpp" />
     <CudaCompile Include="Source Files\Engine Core\Material\Colour\CUDA\Colour.cu" />
@@ -198,7 +198,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\ObjectSceneAbstraction.cu" />
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\Scene.cu" />
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\Sky.cu" />
-    <CudaCompile Include="Source Files\GPUDevices\CUDA\CUDADevices.cu" />
+    <CudaCompile Include="Source Files\GPGPU\CUDA\CUDADevices.cu" />
     <CudaCompile Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\Ray.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu" />
