--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -125,6 +125,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Multithreading\Scheduler.h" />
     <ClInclude Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cuh" />
     <ClInclude Include="Source Files\Physics Engine\PhysicsEngine.h" />
+    <ClInclude Include="Source Files\Raster Engine\OpenGL\OpenGLBackend.h" />
+    <ClInclude Include="Source Files\Raster Engine\OpenGL\OpenGLUtility.h" />
     <ClInclude Include="Source Files\Raster Engine\RasterBackend.h" />
     <ClInclude Include="Source Files\Raster Engine\Vulkan\VulkanBackend.h" />
     <ClInclude Include="Source Files\Raster Engine\Vulkan\VulkanUtility.h" />
@@ -161,6 +163,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Engine Core\Allocator\Allocator.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
     <ClCompile Include="Source Files\GPGPU\GPUManager.cpp" />
+    <ClCompile Include="Source Files\Raster Engine\OpenGL\OpenGLBackend.cpp" />
     <ClCompile Include="Source Files\Raster Engine\RasterBackend.cpp" />
     <ClCompile Include="Source Files\Raster Engine\Vulkan\VulkanBackend.cpp" />
     <ClCompile Include="Source Files\Utility\Logger.cpp" />
