--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -112,6 +112,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Engine Core\Object\CUDA\Tet.cuh" />
     <ClInclude Include="Source Files\Engine Core\Object\CUDA\Vertex.cuh" />
     <ClInclude Include="Source Files\Engine Core\Object\Face.h" />
+    <ClInclude Include="Source Files\Engine Core\Object\Loader.h" />
     <ClInclude Include="Source Files\Engine Core\Object\Object.h" />
     <ClInclude Include="Source Files\Engine Core\Object\OpenCL\CLFace.h" />
     <ClInclude Include="Source Files\Engine Core\Object\OpenCL\CLObject.h" />
@@ -171,6 +172,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Display\Window\WindowManager.cpp" />
     <ClCompile Include="Source Files\Engine Core\Allocator\Allocator.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
+    <ClCompile Include="Source Files\Engine Core\Object\Loader.cpp" />
     <ClCompile Include="Source Files\GPGPU\GPUManager.cpp" />
     <ClCompile Include="Source Files\Raster Engine\OpenGL\OpenGLBackend.cpp" />
     <ClCompile Include="Source Files\Raster Engine\RasterBackend.cpp" />
