--- a/Test/Multithreading test/Multithreading test.vcxproj
+++ b/Test/Multithreading test/Multithreading test.vcxproj
@@ -92,13 +92,13 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\Users\gartea\source\repos\Soul-Engine;$(VCInstallDir)UnitTest\include;C:\Users\gartea\source\repos\Soul-Engine\Libraries\boost_1_65_1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\gartea\source\repos\Soul-Engine\Include Files;C:\Users\gartea\source\repos\Soul-Engine;C:\Users\gartea\source\repos\Soul-Engine\Libraries\boost_1_65_1;C:\Users\gartea\source\repos\Soul-Engine\Source Files</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>C:\Users\gartea\source\repos\Soul-Engine\Libraries\boost_1_65_1\lib64-msvc-14.1;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\gartea\source\repos\Soul-Engine;C:\Users\gartea\source\repos\Soul-Engine\Libraries\boost_1_65_1\lib64-msvc-14.1;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -152,10 +152,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Include Files\Metrics.h" />
+    <ClInclude Include="..\..\Source Files\Events\EventManager.h" />
+    <ClInclude Include="..\..\Source Files\Multithreading\Scheduler.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source Files\Input\InputManager.cpp" />
+    <ClCompile Include="..\..\Source Files\Multithreading\Scheduler.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -165,6 +170,9 @@
     <ClCompile Include="unittest1.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Multithreading test.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
