--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,159 @@
+cmake_minimum_required(VERSION 3.6.2)
+project(Soul_Engine)
 
+set(CMAKE_CXX_STANDARD 11)
+
+set(SOURCE_FILES
+        "Include Files/Metrics.h"
+        "Include Files/SoulCore.h"
+        "Source Files/Algorithms/Data Algorithms/GPU Prefix Sum/PrefixSum.h"
+        "Source Files/Algorithms/Data Algorithms/GPU Sort/Sort.h"
+        "Source Files/Algorithms/Morton Code/MortonCode.h"
+        "Source Files/Bounding Volume Heirarchy/BoundingBox.cpp"
+        "Source Files/Bounding Volume Heirarchy/BoundingBox.h"
+        "Source Files/Bounding Volume Heirarchy/BVH.cpp"
+        "Source Files/Bounding Volume Heirarchy/BVH.h"
+        "Source Files/Data Structures/Radix Tree/RadixTree.cpp"
+        "Source Files/Data Structures/Radix Tree/RadixTree.h"
+        "Source Files/Data Structures/Radix Tree/RTNode.cpp"
+        "Source Files/Data Structures/Radix Tree/RTNode.h"
+        "Source Files/Display/Layout/Layout.h"
+        "Source Files/Display/Layout/SingleLayout.cpp"
+        "Source Files/Display/Layout/SingleLayout.h"
+        "Source Files/Display/Widget/RenderWidget.cpp"
+        "Source Files/Display/Widget/RenderWidget.h"
+        "Source Files/Display/Widget/Widget.cpp"
+        "Source Files/Display/Widget/Widget.h"
+        "Source Files/Display/Window/Window.cpp"
+        "Source Files/Display/Window/Window.h"
+        "Source Files/Display/Window/WindowManager.cpp"
+        "Source Files/Display/Window/WindowManager.h"
+        "Source Files/Engine Core/Frame/Frame.cpp"
+        "Source Files/Engine Core/Frame/Frame.h"
+        "Source Files/Engine Core/Material/Colour/Colour.h"
+        "Source Files/Engine Core/Material/Material.h"
+        "Source Files/Engine Core/Material/ShaderNode.h"
+        "Source Files/Engine Core/Object/Character/Character.cpp"
+        "Source Files/Engine Core/Object/Character/Character.h"
+        "Source Files/Engine Core/Object/OpenCL/CLFace.h"
+        "Source Files/Engine Core/Object/OpenCL/CLObject.h"
+        "Source Files/Engine Core/Object/OpenCL/CLVertex.h"
+        "Source Files/Engine Core/Object/Face.h"
+        "Source Files/Engine Core/Object/Loader.cpp"
+        "Source Files/Engine Core/Object/Loader.h"
+        "Source Files/Engine Core/Object/MiniObject.h"
+        "Source Files/Engine Core/Object/Object.h"
+        "Source Files/Engine Core/Object/Tet.h"
+        "Source Files/Engine Core/Object/Vertex.h"
+        "Source Files/Engine Core/Scene/OpenCL/CLScene.h"
+        "Source Files/Engine Core/Scene/Scene.h"
+        "Source Files/Engine Core/Scene/Sky.h"
+        "Source Files/Engine Core/BasicDependencies.h"
+        "Source Files/Engine Core/SoulCore.cpp"
+        "Source Files/Events/Event.cpp"
+        "Source Files/Events/Event.h"
+        "Source Files/Events/EventManager.cpp"
+        "Source Files/Events/EventManager.h"
+        "Source Files/GPGPU/CUDA/CUDABackend.cpp"
+        "Source Files/GPGPU/CUDA/CUDABackend.h"
+        "Source Files/GPGPU/CUDA/CUDABuffer.cpp"
+        "Source Files/GPGPU/CUDA/CUDABuffer.h"
+        "Source Files/GPGPU/CUDA/CUDADevice.cpp"
+        "Source Files/GPGPU/CUDA/CUDADevice.h"
+        "Source Files/GPGPU/CUDA/CUDARasterBuffer.cpp"
+        "Source Files/GPGPU/CUDA/CUDARasterBuffer.h"
+        "Source Files/GPGPU/OpenCL/OpenCLBackend.cpp"
+        "Source Files/GPGPU/OpenCL/OpenCLBackend.h"
+        "Source Files/GPGPU/OpenCL/OpenCLBuffer.cpp"
+        "Source Files/GPGPU/OpenCL/OpenCLBuffer.h"
+        "Source Files/GPGPU/OpenCL/OpenCLDevice.cpp"
+        "Source Files/GPGPU/OpenCL/OpenCLDevice.h"
+        "Source Files/GPGPU/OpenCL/OpenCLRasterBuffer.cpp"
+        "Source Files/GPGPU/OpenCL/OpenCLRasterBuffer.h"
+        "Source Files/GPGPU/GPUBackendBase.cpp"
+        "Source Files/GPGPU/GPUBackendBase.h"
+        "Source Files/GPGPU/GPUBuffer.cpp"
+        "Source Files/GPGPU/GPUBuffer.h"
+        "Source Files/GPGPU/GPUBufferBase.cpp"
+        "Source Files/GPGPU/GPUBufferBase.h"
+        "Source Files/GPGPU/GPUDevice.cpp"
+        "Source Files/GPGPU/GPUDevice.h"
+        "Source Files/GPGPU/GPUManager.cpp"
+        "Source Files/GPGPU/GPUManager.h"
+        "Source Files/GPGPU/GPURasterBuffer.cpp"
+        "Source Files/GPGPU/GPURasterBuffer.h"
+        "Source Files/GPGPU/GPURasterBufferBase.cpp"
+        "Source Files/GPGPU/GPURasterBufferBase.h"
+        "Source Files/Input/InputManager.cpp"
+        "Source Files/Input/InputManager.h"
+        "Source Files/Input/InputSet.cpp"
+        "Source Files/Input/InputSet.h"
+        "Source Files/Input/Key.cpp"
+        "Source Files/Input/Key.h"
+        "Source Files/Memory/Allocator.cpp"
+        "Source Files/Memory/Allocator.h"
+        "Source Files/Memory/LinearAllocator.cpp"
+        "Source Files/Memory/LinearAllocator.h"
+        "Source Files/Multithreading/Scheduler.cpp"
+        "Source Files/Multithreading/Scheduler.h"
+        "Source Files/Photography/Camera/OpenCL/CLCamera.h"
+        "Source Files/Photography/Camera/Camera.h"
+        "Source Files/Photography/Film/Film.h"
+        "Source Files/Photography/Lens/Lens.h"
+        "Source Files/Photography/CameraManager.cpp"
+        "Source Files/Photography/CameraManager.h"
+        "Source Files/Physics Engine/PhysicsEngine.cpp"
+        "Source Files/Physics Engine/PhysicsEngine.h"
+        "Source Files/Raster Engine/OpenGL/OpenGLBackend.cpp"
+        "Source Files/Raster Engine/OpenGL/OpenGLBackend.h"
+        "Source Files/Raster Engine/OpenGL/OpenGLBuffer.cpp"
+        "Source Files/Raster Engine/OpenGL/OpenGLBuffer.h"
+        "Source Files/Raster Engine/OpenGL/OpenGLJob.cpp"
+        "Source Files/Raster Engine/OpenGL/OpenGLJob.h"
+        "Source Files/Raster Engine/OpenGL/OpenGLShader.cpp"
+        "Source Files/Raster Engine/OpenGL/OpenGLShader.h"
+        "Source Files/Raster Engine/OpenGL/OpenGLUtility.h"
+        "Source Files/Raster Engine/Vulkan/VulkanBackend.cpp"
+        "Source Files/Raster Engine/Vulkan/VulkanBackend.h"
+        "Source Files/Raster Engine/Vulkan/VulkanBuffer.cpp"
+        "Source Files/Raster Engine/Vulkan/VulkanBuffer.h"
+        "Source Files/Raster Engine/Vulkan/VulkanJob.cpp"
+        "Source Files/Raster Engine/Vulkan/VulkanJob.h"
+        "Source Files/Raster Engine/Vulkan/VulkanShader.cpp"
+        "Source Files/Raster Engine/Vulkan/VulkanShader.h"
+        "Source Files/Raster Engine/Vulkan/VulkanUtility.h"
+        "Source Files/Raster Engine/Buffer.cpp"
+        "Source Files/Raster Engine/Buffer.h"
+        "Source Files/Raster Engine/RasterBackend.cpp"
+        "Source Files/Raster Engine/RasterBackend.h"
+        "Source Files/Raster Engine/RasterBase.cpp"
+        "Source Files/Raster Engine/RasterBase.h"
+        "Source Files/Raster Engine/RasterJob.cpp"
+        "Source Files/Raster Engine/RasterJob.h"
+        "Source Files/Raster Engine/Shader.cpp"
+        "Source Files/Raster Engine/Shader.h"
+        "Source Files/Ray Engine/OpenCL/CLRay.h"
+        "Source Files/Ray Engine/OpenCL/CLRayEngine.h"
+        "Source Files/Ray Engine/OpenCL/CLRayJob.h"
+        "Source Files/Ray Engine/Ray.h"
+        "Source Files/Ray Engine/RayEngine.cpp"
+        "Source Files/Ray Engine/RayEngine.h"
+        "Source Files/Ray Engine/RayJob.h"
+        "Source Files/Shaders/Shader Test.cpp"
+        "Source Files/Shaders/Shader.cpp"
+        "Source Files/Shaders/Shader.h"
+        "Source Files/Utility/CUDA/CUDAMath.h"
+        "Source Files/Utility/Includes/GLFWIncludes.h"
+        "Source Files/Utility/Includes/GLMIncludes.h"
+        "Source Files/Utility/Includes/OpenCLIncludes.h"
+        "Source Files/Utility/OpenCL/OpenCLHelper.h"
+        "Source Files/Utility/Settings/Settings.cpp"
+        "Source Files/Utility/Settings/Settings.h"
+        "Source Files/Utility/Assert.cpp"
+        "Source Files/Utility/Assert.h"
+        "Source Files/Utility/Logger.cpp"
+        "Source Files/Utility/Logger.h"
+        "Source Files/Utility/Timer.cpp"
+        "Source Files/Utility/Timer.h")
+
+add_executable(Soul_Engine ${SOURCE_FILES})
