First steps at implementing libraries; GLFW works, GLM does not.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,16 @@ project(Soul_Engine)
 
 set(CMAKE_CXX_STANDARD 11)
 
+add_subdirectory(Libraries/glfw-3.2.1)
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+
+find_package(glm 0.9.8 REQUIRED)
+include_directories(${GLM_INCLUDE_DIRS})
+
 file(GLOB_RECURSE "INCLUDES" "*.h")
 file(GLOB_RECURSE "SOURCES" "*.cpp" "*.h")
 
 add_executable(Soul_Engine ${SOURCES} ${INCLUDES})
+target_link_libraries(Soul_Engine glfw)
