Add boost libraries

--- a/Test/LoggerTest/LoggerTest.vcxproj
+++ b/Test/LoggerTest/LoggerTest.vcxproj
@@ -112,10 +112,12 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\Users\Jihun\Documents\GitHub\Libraries\boost_1_65_1</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>C:\Users\Jihun\Documents\GitHub\Libraries\boost_1_65_1\lib64-msvc-14.1</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
