--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Libraries/src/glfw/glfw"]
 	path = Libraries/src/glfw/glfw
 	url = https://github.com/glfw/glfw
+[submodule "Libraries/src/glm/glm"]
+	path = Libraries/src/glm/glm
+	url = https://github.com/g-truc/glm
