--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
-[submodule "Libraries/src/glfw"]
-	path = Libraries/src/glfw
+[submodule "Libraries/glfw"]
+	path = Libraries/glfw
 	url = https://github.com/glfw/glfw
-[submodule "Libraries/src/glm"]
-	path = Libraries/src/glm
+[submodule "Libraries/glm"]
+	path = Libraries/glm
 	url = https://github.com/g-truc/glm
-[submodule "Libraries/src/stb"]
-	path = Libraries/src/stb
+[submodule "Libraries/stb"]
+	path = Libraries/stb
 	url = https://github.com/nothings/stb
-[submodule "Libraries/src/glew"]
-	path = Libraries/src/glew
+[submodule "Libraries/glew"]
+	path = Libraries/glew
 	url = https://github.com/nigels-com/glew
-[submodule "Libraries/src/tinyobjloader"]
-	path = Libraries/src/tinyobjloader
+[submodule "Libraries/tinyobjloader"]
+	path = Libraries/tinyobjloader
 	url = https://github.com/syoyo/tinyobjloader
