--- a/.gitignore
+++ b/.gitignore
@@ -223,9 +223,4 @@ x64/Release/cudart64_75.dll
 *.opendb
 *.db
 *.db
-/Libraries/boost
-/Libraries/glew
-/Libraries/glfw
-/Libraries/glm/glm
-/Libraries/stb
-/Libraries/tinyObj
+/Libraries
