--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Libraries/googletest"]
 	path = Libraries/googletest
 	url = https://github.com/google/googletest
+[submodule "Libraries/flatbuffers"]
+	path = Libraries/flatbuffers
+	url = https://github.com/google/flatbuffers
